# HPT

./: .gitignore  LICENSE  README.md  pyproject.toml  quickstart.ipynb
env/mujoco/metaworld/: README.md  __init__.py  rollout_runner.py  test_scripted_policies.py
env/mujoco/metaworld/envs/: __init__.py  reward_utils.py
env/mujoco/metaworld/policies/: __init__.py  action.py  policy.py  sawyer_assembly_v1_policy.py  sawyer_assembly_v2_policy.py  sawyer_basketball_v1_policy.py  sawyer_basketball_v2_policy.py  sawyer_bin_picking_v2_policy.py  sawyer_box_close_v1_policy.py  sawyer_box_close_v2_policy.py  sawyer_button_press_topdown_v1_policy.py  sawyer_button_press_topdown_v2_policy.py  sawyer_button_press_topdown_wall_v1_policy.py  (+74 more)
env/realworld/example/: rollout_runner.py
experiments/configs/: config.yaml
experiments/configs/arch/: diffusion_head.yaml
experiments/configs/datasetsize/: metaworld_1.yaml  metaworld_20.yaml
experiments/configs/env/: mujoco_metaworld.yaml  realrobot_image.yaml
experiments/configs/lr/: constant_lr.yaml  cosine_lr.yaml
experiments/configs/mode/: debug.yaml
experiments/scripts/metaworld/: train_test_metaworld_1task.sh  train_test_metaworld_20task_finetune.sh
hpt/: run.py  run_eval.py  train_test.py
hpt/dataset/: local_traj_dataset.py
hpt/models/: diffusion_policy_head.py  policy.py  policy_head.py  policy_stem.py  transformer.py
hpt/utils/: common_utils.py  conditional_unet1d.py  conv1d_components.py  data_aug.py  dict_of_tensor_mixin.py  logging_utils.py  model_utils.py  normalizer.py  positional_embedding.py  replay_buffer.py  sampler.py  scheduling_ddim.py  scheduling_ddpm.py  utils.py  warmup_lr_wrapper.py
(+114 files in other folders)
